# isp-confound-toolkit

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CITATION2.cff  DATA.md  LICENSE  README.md  README_reproduce_figures.md  Supplementary_Methods_Audit.md  Supplementary_Table_S1_decircularization_cells.csv  Supplementary_Table_S1_decircularization_matrix.md  pyproject.toml  references_claim_audit.csv  reported_numbers_source_table.csv  results_manifest.tsv
isp_confound/: __init__.py  config.py  geneformer_wrapper.py  insilico_ko.py
results/data/: CCND1_curve_abl.csv  CCND1_curve_main.csv  token_coverage.csv
scripts/: download_data.py
scripts/benchmark/: benchmark_frangieh.py
scripts/diagnostics/: confound_check.py  deseq2_groundtruth.py  deseq2_replogle.py  diag_pathd.py  heterogeneity_precheck.py  make_brief_figure.py  make_crossdataset_figure.py  make_fig3.py  make_supp_table_s1.py  nonlinear_seal.py  normalize_recheck.py  path2_specificity.py  probe_pathd.py  replogle_select.py  thin_gate.py  thin_gate_clean.py  token_coverage.py
scripts/pipeline/: cache_pathd.py  resample_pathd.py  state_shift.py  state_shift_matrix.py  validate_pathd.py
tests/: test_model.py
