[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isp-confound-toolkit"
version = "0.1.1"
description = "A confound-diagnostic toolkit for judging when to trust foundation-model in-silico perturbation predictions (path-D, universal-responsiveness, coverage gating, library-size and de-circularization checks), with Geneformer as a cautionary case"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Ru Qiu", email = "qiuru77@gmail.com"}
]
keywords = [
    "single-cell", "transcriptomics", "foundation-models", "in-silico-perturbation",
    "geneformer", "model-evaluation", "confound-control", "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "transformers>=4.45,<5.0",
    "scanpy>=1.9",
    "anndata>=0.10",
    "numpy>=1.24",
    "pandas>=2.3",
    "scipy>=1.17",
    "scikit-learn>=1.3",
    "pydeseq2>=0.4",
    "loompy>=3.0.8",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "tqdm>=4.67",
    "datasets>=4.8",
    "peft>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "ipykernel>=6.25",
    "jupyter>=1.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["isp_confound*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:loompy"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
